--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -4,6 +4,8 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    max-width: 768px;
+    margin: 0 auto;
 
     .level {
         font-size: 24px;
