feat add more levels

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,12 +1,11 @@
 <div class="game">
     <div class="level">Level: {{ level }}</div>
     <button class="play" (click)="play()">Play</button>
-    <div class="score">Pontos: {{ score }}</div>
-    <div class="container-buttons">
-        <button (click)="validateNote(0)">{{ note1 }}</button>
-        <button (click)="validateNote(1)">{{ note2 }}</button>
+    <div class="score" *ngIf="start">Pontos: {{ score }}</div>
+    <div class="container-buttons" >
+        <button *ngFor="let note of notes; let i = index;" (click)="validateNote(note)">{{ note.desc }}</button>
     </div>
-    <div class="result">Resultado</div>
+    <div class="result" *ngIf="start">Resultado</div>
     <div *ngIf="!isPlay" style="height: 38px;"></div>
     <div *ngIf="correct && isPlay">
         <i class="fa fa-3x fa-check-circle-o" style="color: green" aria-hidden="true"></i>
