--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -8,58 +8,84 @@
     margin: 0 auto;
 
     .level {
-        font-size: 24px;
+        font-size: 28px;
         color: #9817E8;
         font-weight: 600;
+        height: 8vh;
+        box-shadow: 2px 2px 3px #2f0e45;
+        width: 86vw;
+        border-radius: 8px;
+        margin-bottom: 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .result {
-        font-size: 36px;
+        font-size: 24px;
         color: #9817E8;
-        font-weight: 600;        
+        font-weight: 600;    
     }
 
     .score {
         font-size: 32px;
         color: #9817E8;
-        font-weight: 600; 
+        font-weight: 600;
+        height: 8vh; 
+        margin-top: 16px;
     }
 
-    .play {
+    .button-purple {
         height: 64px;
         width: 50%;
-        background-color: #9817E8;
+        background-color: transparent;
         border-radius: 12px;
         font-size: 24px;
-        color: #FFF;
-        border: 1px solid;
+        color: #9817E8;
+        border: 1px solid #9817E8;
+        box-shadow: 2px 2px 3px #2f0e45;
+    }
+
+    .container {
+        height: 70vh;
+        width: 86%;
+        box-shadow: 2px 2px 3px #2f0e45;
+        border-radius: 16px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+        // justify-content: space-around;
     }
 
     .container-buttons {
         display: flex;
         width: 100%;
         justify-content: space-evenly;
+        height: 18vh;
+        flex-wrap: wrap;
 
         button {
+            margin: 8px;
             height: 64px;
-            width: 33%;
-            background-color: #9817E8;
+            width: 30%;
+            background-color: transparent;
             border-radius: 12px;
             font-size: 24px;
-            color: #FFF;
-            border: 1px solid;
+            color: #9817E8;
+            border: 1px solid #9817E8;
+            box-shadow: 2px 2px 3px #2f0e45;
         }
     }
 }
 
-.game::after {
-    content: "";
-    background: url(./../../assets/img/bg-notes.jpg);
-    opacity: 0.1;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: -1;   
-  }
+// .game::after {
+//     content: "";
+//     top: 0;
+//     left: 0;
+//     bottom: 0;
+//     right: 0;
+//     position: absolute;
+//     background-color: #673ab7;  
+//     z-index: -1;   
+//   }
