--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="header">
-    <i class="fa fa-1x fa-music" aria-hidden="true" style="color: #FFFFFF"></i>
-    <i class="fa fa-1x fa-user" aria-hidden="true" style="color: #FFFFFF"></i>
+    <i class="fa fa-2x fa-music" aria-hidden="true" style="color: #9817E8"></i>
+    <i class="fa fa-2x fa-user" aria-hidden="true" style="color: #9817E8"></i>
 </div>
