--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -2,6 +2,6 @@
     display: flex;
     justify-content: space-between;
     
-    background-color: #DB21A3;
-    padding: 18px;
+    // background-color: #DB21A3;
+    padding: 12px;
 }
