--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,9 @@
 <div class="footer">
-    <i class="fa fa-2x fa-instagram" aria-hidden="true"></i>
-    <i class="fa fa-2x fa-youtube-square" aria-hidden="true"></i>
-    <i class="fa fa-2x fa-github" aria-hidden="true"></i>
+    <div class="play">
+        <i class="fa fa-4x fa-play" (click)="getPlay()" style="margin-left: 14px;" aria-hidden="true"></i>
+    </div>
+    <div class="container-buttons">
+        <i class="fa fa-2x fa-repeat" (click)="getRepeat()" aria-hidden="true"></i>
+        <i class="fa fa-2x fa-step-forward" (click)="getNext()" aria-hidden="true"></i>
+    </div>
 </div>
