--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,7 +1,14 @@
 .header {
     display: flex;
-    justify-content: space-between;
-    
-    // background-color: #DB21A3;
+    justify-content: center;
     padding: 12px;
+    box-shadow: 2px 2px 3px #2f0e45;
+    padding: 18px;
+    background-color: #FEFBF8;
+    height: 50%;
+
+    h1 {
+        color: #7338F2;
+        font-size: 26px;
+    }
 }
