--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -52,7 +52,7 @@
     }
 
     .container {
-        height: 40vh;
+        height: 100%;
         width: 96%;
         box-shadow: 2px 2px 3px #2f0e45;
         display: flex;
