--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -81,6 +81,23 @@
             border: 1px solid #9817E8;
             box-shadow: 2px 2px 3px #2f0e45;
         }
+
+        .gameOver {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            
+            button {
+                width: 75%;
+            }
+
+            h3 {
+                font-size: 24px;
+                color: #9817E8;
+                font-weight: 600; 
+            }
+        }
     }
 }
 
